New Notebook for testing.

--- a/SLAC exp v2.ipynb
+++ b/SLAC exp v2.ipynb
@@ -55,7 +55,10 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "df = pd.read_csv('./slac/Contents of SLAC/slac.csv', usecols=['id','genre', 'subgenre', 'title'])\n",
+    "ids = df.id.tolist()"
+   ],
    "metadata": {
     "collapsed": false
    }
