Update SLAC exp v2.ipynb

--- a/SLAC exp v2.ipynb
+++ b/SLAC exp v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -27,6 +27,7 @@
     "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import math\n",
     "import networkx as nx\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -45,7 +46,8 @@
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "from sklearn.model_selection import cross_val_score, cross_val_predict, cross_validate, KFold, RepeatedKFold\n",
     "from sklearn.preprocessing import LabelBinarizer\n",
-    "from utils import OneHotEncoder1\n",
+    "from utils import OneHotEncoder\n",
+    "from ultility_functions import OneCycleScheduler\n",
     "\n",
     "\n",
     "print(tf.__version__)\n",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "outputs": [],
    "source": [
     "df = pd.read_csv('./slac/Contents of SLAC/slac.csv', usecols=['id','genre', 'subgenre', 'title'])\n",
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "outputs": [
     {
      "name": "stdout",
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 100,
    "outputs": [],
    "source": [
     "def create_n_model(n_layers=1, kernel_init:str=None, activation_fn:str=\"relu\"):\n",
@@ -132,7 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 101,
+   "outputs": [],
+   "source": [
+    "net_params = {\"n_layers\" : 1, \"kernel_init\" : \"he_normal\", \"activation_fn\" : \"selu\", \"epochs\" : 10, \"batch_size\" : 50}\n",
+    "\n",
+    "onecycle = OneCycleScheduler(math.ceil(len(data) / net_params[\"batch_size\"]) * net_params[\"epochs\"], max_rate=0.05)\n",
+    "\n",
+    "fit_params = {\"callbacks\" : onecycle}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "outputs": [
     {
      "name": "stderr",
@@ -145,28 +162,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.84 0.88 0.92 0.68 0.8  0.92 0.8  0.84 0.72 0.84]\n",
-      "Accuracy: 0.824 (0.074)\n"
+      "[0.92 0.84 0.92 0.8  0.84 0.96 0.84 0.88 0.68 0.8 ]\n",
+      "Accuracy: 0.848 (0.075)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:    0.9s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:    8.4s finished\n"
      ]
     }
    ],
    "source": [
-    "net_params = {\"n_layers\" : 1, \"kernel_init\" : \"he_normal\", \"activation_fn\" : \"selu\", \"epochs\" : 10, \"batch_size\" : 50}\n",
-    "\n",
     "neural_network = KerasClassifier(model=create_n_model,\n",
     "                                 verbose=0,\n",
     "                                 **net_params)\n",
     "\n",
     "\n",
     "scores = cross_val_score(neural_network, data, lb_labels,\n",
-    "                         cv=KFold(10, shuffle=True, random_state=random_state), n_jobs=-1, verbose=1)\n",
+    "                         cv=KFold(10, shuffle=True, random_state=random_state), n_jobs=-1, verbose=1,\n",
+    "                         fit_params=fit_params)\n",
     "\n",
     "print(scores)\n",
     "m = np.mean(scores)\n",
