--- a/Midi and Graph tests.ipynb
+++ b/Midi and Graph tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -24,8 +24,20 @@
     "\n",
     "from mido import MidiFile\n",
     "import networkx as nx\n",
+    "from networkx_viewer import Viewer\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import datashader as ds\n",
+    "import datashader.transfer_functions as tf\n",
+    "from datashader.layout import random_layout, circular_layout, forceatlas2_layout\n",
+    "from datashader.bundling import connect_edges, hammer_bundle\n",
+    "\n",
+    "from itertools import chain\n",
     "\n",
     "print(scipy.__version__)\n",
     "print(matplotlib.__version__)\n",
@@ -728,10 +740,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "def complete_graph(input_path):\n",
+    "def complete_graph(input_path) -> nx.Graph:\n",
     "    edgelists = [qf for qf in os.listdir(input_path)\n",
     "                 if qf.endswith('.edgelist') and not qf.startswith('_')]\n",
     "    g = None\n",
@@ -757,13 +769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "loading edgelists...\n",
+      "- full_edgelist.edgelist\n",
       "- notes.edgelist\n",
       "- program.edgelist\n",
       "- tempo.edgelist\n",
@@ -774,7 +787,7 @@
     }
    ],
    "source": [
-    "test = complete_graph(\"C:\\\\Users\\\\vamvp\\Desktop\\Test Edgelists\")"
+    "com_gr = complete_graph(\"C:\\\\Users\\\\vamvp\\Desktop\\Test Edgelists\")"
    ],
    "metadata": {
     "collapsed": false
@@ -794,7 +807,7 @@
     }
    ],
    "source": [
-    "nx.draw(test)"
+    "nx.draw(com_gr, )"
    ],
    "metadata": {
     "collapsed": false
@@ -805,7 +818,67 @@
    "execution_count": 10,
    "outputs": [],
    "source": [
-    "nx.write_edgelist(test, \"C:\\\\Users\\\\vamvp\\Desktop\\Test Edgelists\\\\full_edgelist.edgelist\")"
+    "nx.write_edgelist(com_gr, \"C:\\\\Users\\\\vamvp\\Desktop\\Test Edgelists\\\\full_edgelist.edgelist\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [],
+   "source": [
+    "nodes = pd.DataFrame((list(com_gr.nodes)), columns=['name'])\n",
+    "edges = pd.DataFrame(np.array(list(com_gr.edges)), columns=['source', 'target'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [],
+   "source": [
+    "# from https://datashader.org/user_guide/Networks.html\n",
+    "\n",
+    "# forcedirected = forceatlas2_layout(nodes, edges)\n",
+    "circular  = circular_layout(nodes, uniform=False)\n",
+    "\n",
+    "cvsopts = dict(plot_height=400, plot_width=400)\n",
+    "\n",
+    "def nodesplot(nodes, name=None, canvas=None, cat=None):\n",
+    "    canvas = ds.Canvas(**cvsopts) if canvas is None else canvas\n",
+    "    aggregator=None if cat is None else ds.count_cat(cat)\n",
+    "    agg=canvas.points(nodes,'x','y',aggregator)\n",
+    "    return tf.spread(tf.shade(agg, cmap=[\"#FF3333\"]), px=3, name=name)\n",
+    "\n",
+    "def edgesplot(edges, name=None, canvas=None):\n",
+    "    canvas = ds.Canvas(**cvsopts) if canvas is None else canvas\n",
+    "    return tf.shade(canvas.line(edges, 'x','y', agg=ds.count()), name=name)\n",
+    "\n",
+    "def graphplot(nodes, edges, name=\"\", canvas=None, cat=None):\n",
+    "    if canvas is None:\n",
+    "        xr = nodes.x.min(), nodes.x.max()\n",
+    "        yr = nodes.y.min(), nodes.y.max()\n",
+    "        canvas = ds.Canvas(x_range=xr, y_range=yr, **cvsopts)\n",
+    "\n",
+    "    np = nodesplot(nodes, name + \" nodes\", canvas, cat)\n",
+    "    ep = edgesplot(edges, name + \" edges\", canvas)\n",
+    "    return tf.stack(ep, np, how=\"over\", name=name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "app = Viewer(com_gr)\n",
+    "app.mainloop()"
    ],
    "metadata": {
     "collapsed": false
