--- a/Midi and Graph tests.ipynb
+++ b/Midi and Graph tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,9 +11,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.10.0\n",
-      "3.5.1\n",
-      "2.8.7\n"
+      "1.7.3\n",
+      "3.6.2\n",
+      "2.8.4\n"
      ]
     }
    ],
@@ -36,6 +36,8 @@
     "import datashader.transfer_functions as tf\n",
     "from datashader.layout import random_layout, circular_layout, forceatlas2_layout\n",
     "from datashader.bundling import connect_edges, hammer_bundle\n",
+    "\n",
+    "from torch_geometric.data import HeteroData\n",
     "\n",
     "from itertools import chain\n",
     "\n",
