--- a/SLAC exp v2.ipynb
+++ b/SLAC exp v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -41,6 +41,7 @@
     "from sklearn.preprocessing import LabelBinarizer\n",
     "from utils import OneHotEncoder\n",
     "from ultility_functions import OneCycleScheduler, plot_lr_vs_loss, get_model, find_learning_rate, EarlyStoppingUp\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "print(tf.__version__)\n",
     "print(tf.keras.__version__)\n",
@@ -861,7 +862,18 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "xgb = XGBClassifier()\n",
+    "\n",
+    "\n",
+    "scores_xgb = cross_val_score(xgb, X_train, y_train,\n",
+    "                              cv=KFold(10, shuffle=True, random_state=random_state), n_jobs=-1, verbose=0)\n",
+    "\n",
+    "print(scores_xgb)\n",
+    "m_xgb = np.mean(scores_xgb)\n",
+    "s_xgb = np.std(scores_xgb)\n",
+    "print('Accuracy: %.3f (%.3f)' % (m_xgb, s_xgb))"
+   ],
    "metadata": {
     "collapsed": false
    }
