--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -27,6 +27,7 @@
     "import networkx as nx\n",
     "import matplotlib\n",
     "\n",
+    "import torch\n",
     "from torch_geometric.data import HeteroData\n",
     "\n",
     "\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['11', '6', '9']"
      },
-     "execution_count": 59,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "dict_keys(['note_group', 'pitch', 'program', 'MIDI', 'duration', 'velocity', 'time_sig', 'tempo'])"
      },
-     "execution_count": 60,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,12 +305,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "nodes_f, edges_f = add_types(nodes, edges, node_categories)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Graph Build"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_2604\\185963996.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mnodes_ten\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtensor\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnodes_f\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m: can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool."
+     ]
+    }
+   ],
+   "source": [
+    "nodes_ten = torch.tensor(nodes_f.values)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_2604\\3282452279.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# Convert the nodes dataframe to a PyTorch tensor\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mnodes_ten\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtensor\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnodes_f\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;31m# Convert the edges dataframe to a PyTorch tensor\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0medges_ten\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtensor\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0medges_f\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mTypeError\u001B[0m: can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool."
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the nodes dataframe to a PyTorch tensor\n",
+    "nodes_ten = torch.tensor(nodes_f.values)\n",
+    "\n",
+    "# Convert the edges dataframe to a PyTorch tensor\n",
+    "edges_ten = torch.tensor(edges_f.values)\n",
+    "\n",
+    "# Get the source and target indices from the edges tensor\n",
+    "edge_index = edges[:, :2]\n",
+    "\n",
+    "# Get the edge types from the edges tensor\n",
+    "edge_type = edges[:, 2]\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Old Functions; Not used."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -370,6 +445,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "edges_test = add_edge_type2(edges, node_categories)\n",
+    "\n",
+    "edges_test.loc[edges_test['edge_type'] == 'MIDI__program', ['source', 'target']]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "outputs": [
     {
@@ -384,19 +472,6 @@
    "source": [
     "print(\"Double iteration function: \", timeit.timeit(lambda: add_types(nodes, edges, node_categories), number=1))\n",
     "print(\"Nodes and check function: \", timeit.timeit(lambda: add_types2(nodes, edges, node_categories), number=1))\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "edges_test = add_edge_type2(edges, node_categories)\n",
-    "\n",
-    "edges_test.loc[edges_test['edge_type'] == 'MIDI__program', ['source', 'target']]"
    ],
    "metadata": {
     "collapsed": false
