--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -316,6 +316,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                     source        target\n0      -Albert_King_-_Born_Under_A_Bad_Sign      g1601074\n1      -Albert_King_-_Born_Under_A_Bad_Sign      g1577049\n2      -Albert_King_-_Born_Under_A_Bad_Sign      g1575127\n3      -Albert_King_-_Born_Under_A_Bad_Sign  g-1872221027\n4      -Albert_King_-_Born_Under_A_Bad_Sign    g795292196\n...                                     ...           ...\n18857              -B_B_King_-_Rock_Me_Baby      g1750992\n18858              -B_B_King_-_Rock_Me_Baby    g415858330\n18859              -B_B_King_-_Rock_Me_Baby      g1606844\n18860              -B_B_King_-_Rock_Me_Baby      g1605881\n18866              -B_B_King_-_Rock_Me_Baby      g1603959\n\n[2681 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>source</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1601074</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1577049</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1575127</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g-1872221027</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g795292196</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>18857</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1750992</td>\n    </tr>\n    <tr>\n      <th>18858</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g415858330</td>\n    </tr>\n    <tr>\n      <th>18859</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1606844</td>\n    </tr>\n    <tr>\n      <th>18860</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1605881</td>\n    </tr>\n    <tr>\n      <th>18866</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1603959</td>\n    </tr>\n  </tbody>\n</table>\n<p>2681 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges_f.loc[edges_f['edge_type'] == 'MIDI__has__note_group', ['source', 'target']]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['source', 'target', 'edge_type'], dtype='object')"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges_f.columns"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -324,27 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 21,
    "outputs": [],
    "source": [
-    "node_edge_categories = node_categories.copy()\n",
-    "node_edge_categories['node_types'] = list(node_categories.keys())\n",
-    "node_edge_categories['main_edge_types'] = main_edge_types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "names_list = list(\n",
-    "                itertools.chain(\n",
-    "                    *list(\n",
-    "                        node_edge_categories.values()\n",
-    "                    )\n",
-    "                )\n",
-    "            )"
+    "data = HeteroData()\n",
+    "\n",
+    "data['MIDI'].x = node_categories['MIDI']\n",
+    "data['note_group'].x = node_categories['note_group']\n",
+    "\n",
+    "data['MIDI', 'has', 'note_group'].edge_index = edges_f.loc[edges_f['edge_type'] == 'MIDI__has__note_group', ['source', 'target']]"
    ],
    "metadata": {
     "collapsed": false
@@ -352,13 +381,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(['MIDI', 'note_group'], [('MIDI', 'has', 'note_group')])"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.metadata()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'x': ['-Albert_King_-_Born_Under_A_Bad_Sign', '-B_B_King_-_How_Blue_Can_You_Get', '-B_B_King_-_Rock_Me_Baby']}"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['MIDI']"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_edge_categories = node_categories.copy()\n",
+    "node_edge_categories['node_types'] = list(node_categories.keys())\n",
+    "node_edge_categories['main_edge_types'] = main_edge_types  # Dictionary containing every string that may be found in our Dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "def flatten_lol(lol: list) -> list:\n",
+    "    \"\"\"Flatten list of lists (lol).\"\"\"\n",
+    "    return list(itertools.chain( *list( lol ) ) )\n",
+    "\n",
+    "\n",
+    "names_list = flatten_lol(node_edge_categories.values())\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,66 +468,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'-Albert_King_-_Born_Under_A_Bad_Sign'"
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes_f.iloc[0][0]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO: Make class for easier use\n",
-    "encoder = {string: i for i, string in enumerate(names_list)}\n",
+    "class Encoder:\n",
+    "    def __init__(self, str_list: list):\n",
+    "        self.mapping = {string: i for i, string in enumerate(str_list)}\n",
+    "\n",
+    "    def encode_nodes(self, df: pd.DataFrame) -> torch.Tensor:\n",
+    "        out = torch.zeros([len(df.index),2], dtype=torch.int32)\n",
+    "\n",
+    "        for i in range(len(df.index)):\n",
+    "            out[i,0], out[i,1] = self.mapping[df.iloc[i]['name']], self.mapping[df.iloc[i]['node_type']]\n",
+    "        return out\n",
+    "\n",
+    "    def encode_edges(self, df: pd.DataFrame) -> torch.Tensor:\n",
+    "        out = torch.zeros([len(df.index),3], dtype=torch.int32)\n",
+    "\n",
+    "        for i in range(len(df.index)):\n",
+    "            out[i,0], out[i,1], out[i,2] = self.mapping[df.iloc[i]['source']], self.mapping[df.iloc[i]['target']], self.mapping[df.iloc[i]['edge_type']]\n",
+    "        return out\n",
     "\n",
     "\n",
-    "def reverse_enc(d: dict, value: int) -> str:\n",
-    "    return list(d.keys())[list(d.values()).index(value)]"
+    "    def decode_value(self, value: int) -> str:\n",
+    "        return list(self.mapping.keys())[list(self.mapping.values()).index(value)]\n",
+    "\n",
+    "    def decode_df(self, ten: torch.Tensor):\n",
+    "        out = pd.DataFrame(index=range(ten.size(0)),columns=range(ten.size(1)))\n",
+    "        if ten.size(1) == 2:\n",
+    "            for i in range(len(out.index)):\n",
+    "                out.iloc[i][0], out.iloc[i][1]  = self.decode_value(ten[i][0].item()), self.decode_value(ten[i][1].item())\n",
+    "        elif ten.size(1) == 3:\n",
+    "            for i in range(len(out.index)):\n",
+    "                out.iloc[i][0], out.iloc[i][1], out.iloc[i][2]  = \\\n",
+    "                    self.decode_value(ten[i][0].item()), self.decode_value(ten[i][1].item()), self.decode_value(ten[i][2].item())\n",
+    "\n",
+    "        return out\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "2703"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(nodes_f)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([[0, 0],\n        [0, 0],\n        [0, 0],\n        ...,\n        [0, 0],\n        [0, 0],\n        [0, 0]])"
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nodes_ten = torch.zeros((len(nodes_f),2), dtype=int)\n",
-    "nodes_ten\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "outputs": [],
    "source": [
-    "for i in range(len(nodes_f.index)):\n",
-    "    nodes_ten[i,0], nodes_ten[i,1] = encoder[nodes_f.iloc[i]['name']], encoder[nodes_f.iloc[i]['node_type']]"
+    "encoder = Encoder(names_list)"
    ],
    "metadata": {
     "collapsed": false
@@ -439,19 +543,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-Albert_King_-_Born_Under_A_Bad_Sign\n"
-     ]
+     "data": {
+      "text/plain": "array([[2638, 2706],\n       [   0, 2703],\n       [   1, 2703],\n       ...,\n       [2622, 2704],\n       [2623, 2704],\n       [2624, 2704]])"
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nodes_ten[0,0]\n",
-    "print(reverse_enc(encoder, nodes_ten[0,0]))"
+    "nodes_ten = encoder.encode_nodes(nodes_f)\n",
+    "nodes_ten.numpy()"
    ],
    "metadata": {
     "collapsed": false
