Encoder class added.

--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -317,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "                                     source        target\n0      -Albert_King_-_Born_Under_A_Bad_Sign      g1601074\n1      -Albert_King_-_Born_Under_A_Bad_Sign      g1577049\n2      -Albert_King_-_Born_Under_A_Bad_Sign      g1575127\n3      -Albert_King_-_Born_Under_A_Bad_Sign  g-1872221027\n4      -Albert_King_-_Born_Under_A_Bad_Sign    g795292196\n...                                     ...           ...\n18857              -B_B_King_-_Rock_Me_Baby      g1750992\n18858              -B_B_King_-_Rock_Me_Baby    g415858330\n18859              -B_B_King_-_Rock_Me_Baby      g1606844\n18860              -B_B_King_-_Rock_Me_Baby      g1605881\n18866              -B_B_King_-_Rock_Me_Baby      g1603959\n\n[2681 rows x 2 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>source</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1601074</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1577049</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g1575127</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g-1872221027</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-Albert_King_-_Born_Under_A_Bad_Sign</td>\n      <td>g795292196</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>18857</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1750992</td>\n    </tr>\n    <tr>\n      <th>18858</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g415858330</td>\n    </tr>\n    <tr>\n      <th>18859</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1606844</td>\n    </tr>\n    <tr>\n      <th>18860</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1605881</td>\n    </tr>\n    <tr>\n      <th>18866</th>\n      <td>-B_B_King_-_Rock_Me_Baby</td>\n      <td>g1603959</td>\n    </tr>\n  </tbody>\n</table>\n<p>2681 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,13 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['source', 'target', 'edge_type'], dtype='object')"
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "data = HeteroData()\n",
@@ -381,13 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "(['MIDI', 'note_group'], [('MIDI', 'has', 'note_group')])"
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,13 +401,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "{'x': ['-Albert_King_-_Born_Under_A_Bad_Sign', '-B_B_King_-_How_Blue_Can_You_Get', '-B_B_King_-_Rock_Me_Baby']}"
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "def flatten_lol(lol: list) -> list:\n",
@@ -448,13 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,13 +468,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
       "text/plain": "'-Albert_King_-_Born_Under_A_Bad_Sign'"
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,6 +504,7 @@
     "            out[i,0], out[i,1] = self.mapping[df.iloc[i]['name']], self.mapping[df.iloc[i]['node_type']]\n",
     "        return out\n",
     "\n",
+    "\n",
     "    def encode_edges(self, df: pd.DataFrame) -> torch.Tensor:\n",
     "        out = torch.zeros([len(df.index),3], dtype=torch.int32)\n",
     "\n",
@@ -515,7 +516,8 @@
     "    def decode_value(self, value: int) -> str:\n",
     "        return list(self.mapping.keys())[list(self.mapping.values()).index(value)]\n",
     "\n",
-    "    def decode_df(self, ten: torch.Tensor):\n",
+    "\n",
+    "    def decode_df(self, ten: torch.Tensor) -> pd.DataFrame:\n",
     "        out = pd.DataFrame(index=range(ten.size(0)),columns=range(ten.size(1)))\n",
     "        if ten.size(1) == 2:\n",
     "            for i in range(len(out.index)):\n",
@@ -532,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "encoder = Encoder(names_list)"
@@ -543,13 +545,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[2638, 2706],\n       [   0, 2703],\n       [   1, 2703],\n       ...,\n       [2622, 2704],\n       [2623, 2704],\n       [2624, 2704]])"
      },
-     "execution_count": 73,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
