--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -558,6 +558,7 @@
    ],
    "source": [
     "nodes_ten = encoder.encode_nodes(nodes_f)\n",
+    "\n",
     "nodes_ten.numpy()"
    ],
    "metadata": {
@@ -566,34 +567,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
+   "execution_count": 24,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_2604\\3282452279.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# Convert the nodes dataframe to a PyTorch tensor\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mnodes_ten\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtensor\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnodes_f\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;31m# Convert the edges dataframe to a PyTorch tensor\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0medges_ten\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtensor\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0medges_f\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mTypeError\u001B[0m: can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint8, and bool."
+     "data": {
+      "text/plain": "array([[2638,    0, 2714],\n       [2638,    1, 2714],\n       [2638,    2, 2714],\n       ...,\n       [2552, 2610, 2717],\n       [2553, 2600, 2717],\n       [2553, 2672, 2716]])"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges_ten = encoder.encode_edges(edges_f)\n",
+    "edges_ten.numpy()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[2638,    0],\n        [2638,    1],\n        [2638,    2],\n        ...,\n        [2552, 2610],\n        [2553, 2600],\n        [2553, 2672]], dtype=torch.int32)"
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges_ten[:, :2]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_type = nodes_f.iloc[:, 1]\n",
+    "\n",
+    "# Get the source and target indices from the edges tensor\n",
+    "edge_index = edges_ten[:, :2]\n",
+    "\n",
+    "# Get the edge types from the edges tensor\n",
+    "edge_type = edges_f.iloc[:, 2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [],
+   "source": [
+    "hetero_graph = HeteroData(x=nodes_ten, node_type=node_type, edge_index=edge_index, edge_type=edge_type)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HeteroData(\n",
+      "  x=[2703, 2],\n",
+      "  node_type=0             MIDI\n",
+      "1       note_group\n",
+      "2       note_group\n",
+      "3       note_group\n",
+      "4       note_group\n",
+      "           ...    \n",
+      "2698       program\n",
+      "2699         tempo\n",
+      "2700         pitch\n",
+      "2701         pitch\n",
+      "2702         pitch\n",
+      "Name: node_type, Length: 2703, dtype: object,\n",
+      "  edge_index=[19366, 2],\n",
+      "  edge_type=0              MIDI__has__note_group\n",
+      "1              MIDI__has__note_group\n",
+      "2              MIDI__has__note_group\n",
+      "3              MIDI__has__note_group\n",
+      "4              MIDI__has__note_group\n",
+      "                    ...             \n",
+      "19361      note_group__has__duration\n",
+      "19362    note_group__contains__pitch\n",
+      "19363    note_group__contains__pitch\n",
+      "19364    note_group__contains__pitch\n",
+      "19365      note_group__has__duration\n",
+      "Name: edge_type, Length: 19366, dtype: object\n",
+      ")\n"
      ]
     }
    ],
    "source": [
-    "# Convert the nodes dataframe to a PyTorch tensor\n",
-    "nodes_ten = torch.tensor(nodes_f.values)\n",
-    "\n",
-    "# Convert the edges dataframe to a PyTorch tensor\n",
-    "edges_ten = torch.tensor(edges_f.values)\n",
-    "\n",
-    "# Get the source and target indices from the edges tensor\n",
-    "edge_index = edges[:, :2]\n",
-    "\n",
-    "# Get the edge types from the edges tensor\n",
-    "edge_type = edges[:, 2]\n"
-   ]
+    "print(hetero_graph)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
