--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -614,6 +614,7 @@
    "execution_count": 40,
    "outputs": [],
    "source": [
+    "#TODO: Check what goes wrong\n",
     "node_type = nodes_full.iloc[:, 1]\n",
     "\n",
     "# Get the source and target indices from the edges tensor\n",
