--- a/HeteroData Graph.ipynb
+++ b/HeteroData Graph.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -488,13 +488,13 @@
       "- program.edgelist\n",
       "- tempo.edgelist\n",
       "- time.signature.edgelist\n",
-      "Nodes: 84093\n",
-      "Edges: 702340\n"
+      "Nodes: 93553\n",
+      "Edges: 786635\n"
      ]
     }
    ],
    "source": [
-    "C = complete_graph(\".\\slac\\embeddings\\edgelist0\")"
+    "C = complete_graph(\".\\slac\\embeddings\\\\all\")"
    ],
    "metadata": {
     "collapsed": false
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "nodes_c = pd.DataFrame((list(C.nodes)), columns=['name'])\n",
@@ -514,14 +514,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node_cat_dict took 0.17 secs to run\n",
-      "Run the script in 0.1674 secs\n"
+      "node_cat_dict took 0.19 secs to run\n"
      ]
     }
    ],
@@ -534,13 +533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "dict_keys(['note_group', 'pitch', 'program', 'MIDI', 'duration', 'velocity', 'time_sig', 'tempo'])"
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,27 +553,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Couldn't find program: 'false'\n"
+      "add_node_type took 1.48 mins to run\n",
+      "add_edge_type took 28.56 mins to run\n",
+      "add_types took 30.04 mins to run\n"
      ]
     }
    ],
    "source": [
-    "%%script false --no-raise-error\n",
+    "#  %%script false --no-raise-error\n",
     "\n",
-    "tic = time.perf_counter()\n",
-    "nodes_cf, edges_cf = add_types(nodes_c, edges_c, node_categories_c)\n",
-    "toc = time.perf_counter()\n",
-    "print(f\"Run the script in {(toc-tic)/60:0.2f} mins\")\n",
+    "nodes_full, edges_full = add_types(nodes_c, edges_c, node_categories_c)\n",
+    "\n",
     "winsound.Beep(400, 700)\n",
     "\n",
-    "nodes_cf.to_csv('nodes_complete.csv')\n",
-    "edges_cf.to_csv('edges_complete.csv')"
+    "nodes_full.to_csv('nodes_complete.csv')\n",
+    "edges_full.to_csv('edges_complete.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -582,11 +581,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "nodes_full = pd.read_csv('.\\slac\\Contents of Slac\\\\nodes_complete.csv')\n",
-    "edges_full = pd.read_csv('.\\slac\\Contents of Slac\\edges_complete.csv')\n"
+    "# nodes_full = pd.read_csv('.\\slac\\Contents of Slac\\\\nodes_complete.csv')\n",
+    "# edges_full = pd.read_csv('.\\slac\\Contents of Slac\\edges_complete.csv')\n"
    ],
    "metadata": {
     "collapsed": false
@@ -594,18 +593,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "main_edge_types = [\"MIDI__has__tempo\",\n",
+    "                   \"MIDI__in__time_sig\",\n",
+    "                   \"MIDI__has__program\",\n",
+    "                   \"MIDI__has__note_group\",\n",
+    "                   \"note_group__has__velocity\",\n",
+    "                   \"note_group__has__duration\",\n",
+    "                   \"note_group__contains__pitch\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "full_categories = node_categories_c.copy()\n",
     "full_categories['node_types'] = list(node_categories_c.keys())\n",
     "full_categories['main_edge_types'] = main_edge_types  # Dictionary containing every string that may be found in our Dataframes\n",
@@ -619,15 +637,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "encode_nodes took 9.72 secs to run\n",
-      "encode_edges took 1.95 mins to run\n",
-      "Run the script in 2.12 mins\n"
+      "encode_nodes took 7.79 secs to run\n",
+      "encode_edges took 1.35 mins to run\n"
      ]
     }
    ],
@@ -646,10 +663,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "outputs": [],
    "source": [
-    "#TODO: Check what goes wrong\n",
     "node_type = nodes_full.iloc[:, 1]\n",
     "\n",
     "# Get the source and target indices from the edges tensor\n",
@@ -664,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "full_hetero_graph = HeteroData(x=nodes_ten_f, node_type=node_type, edge_index=edge_index, edge_type=edge_type)"
@@ -675,13 +691,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "HeteroData(\n  x=[84093, 2],\n  node_type=0        Blues_-_Modern-B_B_King_-_Rock_Me_Baby\n1                                   g1365629521\n2              http://purl.org/midi-ld/notes/55\n3              http://purl.org/midi-ld/notes/67\n4                                         dur:2\n                          ...                  \n84088                               timesig:9/8\n84089                               timesig:2/2\n84090                               timesig:8/4\n84091                               timesig:1/8\n84092                               timesig:6/4\nName: name, Length: 84093, dtype: object,\n  edge_index=[702340, 2],\n  edge_type=0                                 g1365629521\n1                                    g1693331\n2                                g-1059250695\n3                                    g1694292\n4                                g-1130800403\n                         ...                 \n702335    http://purl.org/midi-ld/programs/30\n702336    http://purl.org/midi-ld/programs/34\n702337     http://purl.org/midi-ld/programs/0\n702338                                     17\n702339                            timesig:6/4\nName: target, Length: 702340, dtype: object\n)"
+      "text/plain": "HeteroData(\n  x=[93553, 2],\n  node_type=0              MIDI\n1        note_group\n2             pitch\n3          duration\n4          velocity\n            ...    \n93548      time_sig\n93549      time_sig\n93550      time_sig\n93551      time_sig\n93552      time_sig\nName: node_type, Length: 93553, dtype: object,\n  edge_index=[786635, 2],\n  edge_type=0         MIDI__has__note_group\n1         MIDI__has__note_group\n2         MIDI__has__note_group\n3         MIDI__has__note_group\n4         MIDI__has__note_group\n                  ...          \n786630       MIDI__has__program\n786631       MIDI__has__program\n786632       MIDI__has__program\n786633         MIDI__has__tempo\n786634       MIDI__in__time_sig\nName: edge_type, Length: 786635, dtype: object\n)"
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +711,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "([], [])"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_hetero_graph.metadata()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
