--- a/GiantMIDI-Piano subset experiments.ipynb
+++ b/GiantMIDI-Piano subset experiments.ipynb
@@ -26,9 +26,8 @@
     "import pandas as pd\n",
     "import winsound\n",
     "\n",
-    "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay, precision_score, recall_score\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
