Trying to implement kfold cv.

--- a/Slac Hetero Graph.ipynb
+++ b/Slac Hetero Graph.ipynb
@@ -685,7 +685,7 @@
     "    skf = KFold(folds, shuffle=True, random_state=42)\n",
     "\n",
     "    test_indices, train_indices = [], []\n",
-    "    for _, idx in tqdm(skf.split(torch.zeros(len(dataset['MIDI'].x)), dataset['MIDI'].y)):\n",
+    "    for _, idx in skf.split(torch.zeros(len(dataset['MIDI'].x)), dataset['MIDI'].y):\n",
     "        test_indices.append(torch.from_numpy(idx).to(torch.long))\n",
     "\n",
     "    val_indices = [test_indices[i - 1] for i in range(folds)]\n",
